tests/paczka1/fuzzy1/54324578.err
Error in line 10: TmrsBEa6xMF S978 22,89
Error in line 7: TmrsBEa6xMF S500 3,7
Error in line 18: TmrsBEa6xMF S978 33,9
